2006-04-20  Timtohy Brownawell  <tbrownaw@gmail.com>

	* tests/t_ls_changed.at: Also check that it detects added files/dirs.

2006-04-20  Timtohy Brownawell  <tbrownaw@gmail.com>

	* tests/t_ls_epochs.at: New file: test "ls epochs" and
	"ls epochs <branch>"
	* testsuite.at: Add it.

2006-04-20  Timtohy Brownawell  <tbrownaw@gmail.com>

	* tests/t_checkout_heads.at: New file: checkout should fail if there
	are multiple heads.
	* testsuite.at: Add it.

2006-04-20  Timtohy Brownawell  <tbrownaw@gmail.com>

	* testsuite.at: NOT_ON_WIN32 seems to be broken. Fix it.

2006-04-19  Timtohy Brownawell  <tbrownaw@gmail.com>

	* commands.cc (log): Make log accept --recursive, which makes
	"log dir" log revisions where anything under dir/ changes.
	* tests/t_log_dir.at: Remove XFAIL. Test logging at attr change.
	* tests/t_help.at: New file, test the "help" command.
	* tests/t_approve.at: New file, test the "approve" command.
	* testsuite.at: Add the new tests.

2006-04-19  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_mtn_ignore.at: Tweak test so it would have detected the
	broken .mtn-ignore error handling fixed in the last commit.

	* std_hooks.lua (ignore_file): Fix up error handling for
	non-existent .mtn-ignore files.

2006-04-18  Richard Levitte  <richard@levitte.org>

	This change was contributed by Shaun Jackman <sjackman@gmail.com>

	* debian/changelog: Add missing Debian releases.

	* debian/rules: From Debian bug report #334999: FTBFS on
	arm/hppa/m68k: please use g++-3.4

2006-04-17  Benoît Dejean  <benoit@placenet.org>

	* po/fr.po: Fixed nœud spelling.

2006-04-15  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_pidfile_log_permissions.at: Minor tweak to last change.

	* tests/t_empty_env.at: Remove LD_LIBRARY_PATH test; it was
	causing the test to be skipped without good reason in too many
	environments.

	* tests/t_ls_branches.at: Tweak include and exclude patterns to
	avoid spurious glob expansion under MinGW.
